--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ ul {
   background: url(img/landing-photo.avif);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 
 }
 
@@ -79,13 +79,14 @@ ul {
 }
 
 .landing-show p{
-  padding-left: 100px;
-  width: 700px;
+  font-size: 15px;
+  padding-left: 0;
+  width: 400px;
   padding-bottom: 15px;
 }
 
 .landing-btn{
-  padding-left: 100px;
+  padding-left: 0;
 }
 .btn-one-person{
   cursor: pointer;
@@ -103,6 +104,7 @@ ul {
 }
 
 .btn-six-person{
+  font-size: medium;
   cursor: pointer;
   font-weight: bolder;
   margin-left: 20px;
@@ -111,4 +113,65 @@ ul {
 
 .btn-six-person:hover{
   border-bottom: 1.5px solid #272727;
+}
+
+
+
+.icon-links{
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding-top: 100px;;
+}
+
+.icon-links div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icon-links div img{
+  width: 40px;
+  padding-bottom: 15px;
+}
+
+.icon-links div a{
+  text-decoration: underline;
+  color: #0067b8;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+  width: 90%;
+  margin: auto;
+}
+
+.cards img {
+  width: 100%;
+  padding-top: 100px;
+  margin-bottom: 20px;
+}
+
+.cards h3{
+  margin-bottom: 10px;
+  font-size: 25px;
+  font-weight: 1px;
+}
+
+.cards a{
+  margin-top: 30px;
+  color: #0067b8;
+
+}
+
+.cards a:hover{
+  text-decoration: underline;
+}
+
+.cards p{
+  font-size: 1.1rem;
+  margin-bottom: 20px;
 }
