media queries added

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ ul {
   background: url(img/landing-photo.avif);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: center/cover;
 
 }
 
@@ -128,6 +128,7 @@ ul {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   padding-top: 100px;
   padding-bottom: 130px;
+  grid-gap: 20px;
 }
 
 .icon-links div{
@@ -191,7 +192,7 @@ ul {
 }
 
 .xbox .content {
-  width: 40%;
+  width: 55%;
   padding: 50px 0 0 30px;
   color: #fff;
 }
@@ -210,7 +211,6 @@ ul {
   margin-left: 40px;
   color: #fff;
   cursor: pointer;
-  display: inline-block;
   border: 0;
   font-weight: bold;
   padding: 10px 20px;
@@ -290,4 +290,69 @@ ul {
 .footer li {
   margin-right: 30px;
   margin-bottom: 20px;
+}
+
+@media(max-width: 768px){
+  .icon-links{
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .cards{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .links-inner{
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .xbox p {
+    margin: 30px ;
+    font-size: medium;
+  }
+
+  .xbox h2{
+    font-size: larger;
+    margin: 25px;
+  
+  }
+
+  .landing-show h3{
+    font-size: 2.5em;
+    font-weight: 400;
+    padding-top: 50px;
+    padding-left: 40px;
+  }
+
+  .main-menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 20px;
+    padding-top: 5px;
+  }
+}
+
+@media(max-width: 550px) {
+  .cards{
+    grid-template-columns: 1fr;
+  }
+
+  .links-inner{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .landing-show p{
+    font-size: 15px;
+    padding-left: 0;
+    width: 300px;
+    padding-bottom: 15px;
+  }
+
+  .landing-btn{
+    width: 180px;
+  }
+  .btn-six-person{
+    margin-left: 0px;
+  }
+
 }
